The custom modification I did for my method to pass all test in code war to achieve the reverse polish notation calculator